elf: I18ze C compiler option strings

--- a/gnu.elf/gnu.elf.properties
+++ b/gnu.elf/gnu.elf.properties
@@ -145,8 +145,21 @@ tool.flash_eb = ARC GNU Create Flash Image (EB)
 tool.listing_eb = ARC GNU Create Listing (EB)
 tool.printsize_eb = ARC GNU Print Size (EB)
 
-# Compiler -> Debugging
-option.debugging = Debugging
+# Compiler options
+c.compiler.option.packstruct = Pack structures (-fpack-struct)
+c.compiler.option.shortenums = Short enumerations (-fshort-enums)
+c.compiler.option.function_sections = Function sections (-ffunction-sections)
+c.compiler.option.data_sections = Data sections (-fdata-sections)
+c.compiler.option.debug_format = Debug Format
+c.compiler.option.debug_format.dwarf2 = dwarf-2
+c.compiler.option.debug_format.dwarf4 = dwarf-4
+c.compiler.option.debug_format.stabs = stabs
+c.compiler.option.debug_format.stabsplus = stabs+
+c.compiler.option.debug_format.gdb = gdb
+c.compiler.option.lstfilename = Assembler Listing
+c.compiler.option.no_inline_functions = Do not inline functions (-fno-inline-functions)
+c.compiler.option.signed_char = 'char' is signed (-fsigned-char)
+c.compiler.option.unsugned_bitfields = Bitfields are unsigned (-funsigned-bitfields)
 
 # Assembler
 option.assembler.flags = Assembler flags
