elf: I18ze C++ compiler option strings

--- a/gnu.elf/gnu.elf.properties
+++ b/gnu.elf/gnu.elf.properties
@@ -161,6 +161,18 @@ c.compiler.option.no_inline_functions = Do not inline functions (-fno-inline-fun
 c.compiler.option.signed_char = 'char' is signed (-fsigned-char)
 c.compiler.option.unsugned_bitfields = Bitfields are unsigned (-funsigned-bitfields)
 
+# C++ compiler options
+cpp.compiler.option.lang_std = Language Standard
+cpp.compiler.option.lang_std.none =  
+cpp.compiler.option.lang_std.cpp98 = ISO C++98 (-std=c++98)
+cpp.compiler.option.lang_std.cpp11 = ISO C++11 (-std=c++0x)
+cpp.compiler.option.lang_std.cpp1y = ISO C++1y (-std=c++1y)
+cpp.compiler.option.nostdinccpp = Do not search system C++ directories (-nostdinc++)
+cpp.compiler.option.wabi = ABI warnings (-Wabi)
+cpp.compiler.option.weffcpp = Effective C++ warnings (-Weffc++)
+cpp.compiler.option.noexceptions = Do not use exceptions (-fno-exceptions)
+cpp.compiler.option.nortti = Do not use RTTI (-fno-rtti)
+
 # Assembler
 option.assembler.flags = Assembler flags
 
