elf: I18ze linker option strings

--- a/gnu.elf/gnu.elf.properties
+++ b/gnu.elf/gnu.elf.properties
@@ -173,8 +173,27 @@ cpp.compiler.option.weffcpp = Effective C++ warnings (-Weffc++)
 cpp.compiler.option.noexceptions = Do not use exceptions (-fno-exceptions)
 cpp.compiler.option.nortti = Do not use RTTI (-fno-rtti)
 
-# Assembler
-option.assembler.flags = Assembler flags
+# Assembler options
+assembler.option.flags = Assembler flags
+
+# Linker options
+category.general = General
+linker.option.nano = Enable nano.specs to use standard libraries optimized for code size
+linker.option.specs = Use GCC specs file
+linker.option.specs.nsim = nsim
+linker.option.specsem.emsk_em9d = emsk_em9d
+linker.option.specsem.emsk_em11d = emsk_em11d
+linker.option.specs.nosys = nosys
+linker.option.specs.none = None
+linker.option.scriptfile = Script file (-T)
+linker.option.memoryx = Directory with memory.x file
+linker.category.libs = Libraries
+linker.category.misc = Miscellaneous
+linker.option.mapfilename = Map Filename
+linker.option.cref = Cross Reference (-Xlinker --cref)
+linker.option.printmap = Print link map (-Xlinker --print-map)
+linker.option.verbose = Verbose (-v)
+linker.option.otherflags = Other flags
 
 # Configurations
 configuration.debug = Debug
