elf: I18ze create flash option strings

--- a/gnu.elf/gnu.elf.properties
+++ b/gnu.elf/gnu.elf.properties
@@ -188,12 +188,30 @@ linker.option.specs.none = None
 linker.option.scriptfile = Script file (-T)
 linker.option.memoryx = Directory with memory.x file
 linker.category.libs = Libraries
-linker.category.misc = Miscellaneous
+category.misc = Miscellaneous
 linker.option.mapfilename = Map Filename
 linker.option.cref = Cross Reference (-Xlinker --cref)
 linker.option.printmap = Print link map (-Xlinker --print-map)
 linker.option.verbose = Verbose (-v)
 linker.option.otherflags = Other flags
+
+# Create flash options
+category.output = Output
+flash.option.output = Output file format (-O)
+flash.option.output.ihex = ihex
+flash.option.output.elf32_littlearc = elf32-littlearc
+flash.option.output.elf32_bigarc = elf32-bigarc
+flash.option.output.elf32_little = elf32-little
+flash.option.output.elf32_big = elf32-big
+flash.option.output.srec = srec
+flash.option.output.symbolsrec = symbolsrec
+flash.option.output.tekhex = tekhex
+flash.option.output.binary = binary
+flash.category.section = Section
+flash.option.section_text = Section: -j .text
+flash.option.section_data = Section: -j .data
+flash.option.section_other = Other (-j)
+flash.option.other = Other options
 
 # Configurations
 configuration.debug = Debug
