elf: I18ze create listing and printsize option strings

--- a/gnu.elf/gnu.elf.properties
+++ b/gnu.elf/gnu.elf.properties
@@ -213,6 +213,17 @@ flash.option.section_data = Section: -j .data
 flash.option.section_other = Other (-j)
 flash.option.other = Other options
 
+# Create listing options
+listing.option.other = Other flags
+
+# Print size options
+printsize.option.format = Size Format
+printsize.option.format.berkeley = Berkeley
+printsize.option.format.sysv = SysV
+printsize.option.hex = Hex
+printsize.option.totals = Show Totals
+printsize.option.other = Other flags
+
 # Configurations
 configuration.debug = Debug
 configuration.release = Release
@@ -221,4 +232,3 @@ configuration.release = Release
 # Scanner Discovery Profile
 #
 extension.scdprofile.c.arc = ARC GNU C managed make per project SCD profile
-
