--- a/gnu.elf/pom.xml
+++ b/gnu.elf/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.synopsys.arc.gnu</groupId>
-    <artifactId>plugin</artifactId>
+    <artifactId>gnu-parent</artifactId>
     <version>2019.9.0-SNAPSHOT</version>
   </parent>
   <artifactId>com.synopsys.arc.gnu.elf</artifactId>
