--- a/org.eclipse.cdt.cross.arc.gnu.uclibc/pom.xml
+++ b/org.eclipse.cdt.cross.arc.gnu.uclibc/pom.xml
@@ -2,8 +2,8 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>com.arc.cdt</groupId>
-    <artifactId>plugin</artifactId>
+    <groupId>com.synopsys.arc.gnu</groupId>
+    <artifactId>gnu-parent</artifactId>
     <version>2019.9.0-SNAPSHOT</version>
   </parent>
   <artifactId>org.eclipse.cdt.cross.arc.gnu.uclibc</artifactId>
