--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.synopsys.arc.gnu</groupId>
-  <artifactId>plugin</artifactId>
+  <artifactId>gnu-parent</artifactId>
   <version>2019.9.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
